--- a/src/components/feature/errorScreen/template/style.css
+++ b/src/components/feature/errorScreen/template/style.css
@@ -1,7 +1,11 @@
 .errorTemplate{
 
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
+    /* background-position: center;
+    background-size: cover; */
+    position: absolute;
+    top:0%;
+    bottom: 0%;
+    width:100%;
+    /* background-size: 908px 100vh; */
 }
